chore(fix): fix breadcrumb span vertical align

--- a/src/app/shared/components/breadcrumb/breadcrumb.component.scss
+++ b/src/app/shared/components/breadcrumb/breadcrumb.component.scss
@@ -28,4 +28,8 @@
     vertical-align: middle;
     user-select: none;
   }
+
+  > .link {
+    vertical-align: middle;
+  }
 }
